RESOLVED FIXED137855
REGRESSION (r173356): Safari can't install a profile, gets 'Download Failed error
https://bugs.webkit.org/show_bug.cgi?id=137855
Summary REGRESSION (r173356): Safari can't install a profile, gets 'Download Failed e...
Antti Koivisto
Reported 2014-10-18 14:16:09 PDT
MIME type sniffing doesn't work on synthesized NSURLResponses.
Attachments
patch (7.98 KB, patch)
2014-10-18 14:27 PDT, Antti Koivisto
no flags
patch 2 (7.88 KB, patch)
2014-10-18 15:05 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2014-10-18 14:16:24 PDT
Antti Koivisto
Comment 2 2014-10-18 14:27:33 PDT
mitz
Comment 3 2014-10-18 14:45:09 PDT
Comment on attachment 240069 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=240069&action=review > Source/WebCore/platform/network/mac/ResourceResponseMac.mm:69 > + [headerDictionary setObject:(NSString *)m_mimeType forKey:@"Content-Type"]; This can result in lying to the API client about the content of the response headers from the server. Can we use the -_setMIMEType: (which we use elsewhere in WebCore) instead?
mitz
Comment 4 2014-10-18 14:45:35 PDT
(In reply to comment #3) > Comment on attachment 240069 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=240069&action=review > > > Source/WebCore/platform/network/mac/ResourceResponseMac.mm:69 > > + [headerDictionary setObject:(NSString *)m_mimeType forKey:@"Content-Type"]; > > This can result in lying to the API client about the content of the response > headers from the server. Can we use the -_setMIMEType: (which we use > elsewhere in WebCore) instead? /the -_setMIMEType:/the -_setMIMEType: method/
Antti Koivisto
Comment 5 2014-10-18 14:53:27 PDT
> This can result in lying to the API client about the content of the response > headers from the server. Can we use the -_setMIMEType: (which we use > elsewhere in WebCore) instead? We probably can.
Antti Koivisto
Comment 6 2014-10-18 15:05:28 PDT
WebKit Commit Bot
Comment 7 2014-10-18 15:54:19 PDT
Comment on attachment 240073 [details] patch 2 Clearing flags on attachment: 240073 Committed r174866: <http://trac.webkit.org/changeset/174866>
WebKit Commit Bot
Comment 8 2014-10-18 15:54:22 PDT
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 9 2014-10-22 13:18:53 PDT
*** Bug 137493 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.